Fix Hero image width that is causing the home page to overflow.

--- a/audiophile/src/assets/css/components/_mobile.scss
+++ b/audiophile/src/assets/css/components/_mobile.scss
@@ -44,7 +44,7 @@ header {
     background-color: 131313;
 
     img {
-        width: 100vw;
+        width: 100%;
         object-fit: contain;
         z-index: -1;
     }
